[gd_scene load_steps=4 format=3 uid="uid://hge8wysldfko"]

[ext_resource type="Script" path="res://shop_item.gd" id="1_7jn35"]
[ext_resource type="SpriteFrames" uid="uid://c0pvopnm16pxw" path="res://diefaces.tres" id="2_xt8o2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ncj4"]
size = Vector2(8, 8)

[node name="shopItem" type="Node2D"]
script = ExtResource("1_7jn35")

[node name="DieSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("2_xt8o2")
animation = &"4 mana 7 7"

[node name="Area2D" type="Area2D" parent="DieSprite"]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="DieSprite/Area2D"]
shape = SubResource("RectangleShape2D_6ncj4")

[connection signal="input_event" from="DieSprite/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="DieSprite/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="DieSprite/Area2D" to="." method="_on_area_2d_mouse_exited"]
